# crawler

./: Makefile  README.md  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 5758b3ffd1f9_updated_page_model.py  7843c0c432b5_initial_setup_of_all_required_models.py  918c6c5049fa_updated_page_model.py  ca729a6f5074_update_on_models.py
crawler/managers/: shared.py  utils.py  website.py
crawler/models/: shared.py  utils.py  website.py
crawler/models/database/: __init__.py  base.py  job.py  page.py  target.py
crawler/readers/: exceptions.py  filesystem.py  interfaces.py
crawler/stores/: aws.py  database.py  filesystem.py  generic.py  interfaces.py
docs/: developer.md
tests/examples/: website-empty.json  website-full-content.json  website_model_not_supported_file_type.yaml
tests/fabrics/: test_database.py  test_examples.py  test_website.py
tests/managers/: test_shared.py  test_utils.py  test_website.py
tests/models/: test_database_job.py  test_database_page.py  test_database_target.py  test_shared.py  test_utils.py  test_website.py
tests/readers/: test_filesystem.py
tests/stores/: test_aws.py  test_database.py  test_filesystem.py
