[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "Crawling automation"
authors = ["Svetozar Dimitrov <sv.k.dimitrov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
boto3-stubs-full = "^1.35.25"
boto3 = "1.34.127"
nanoid = "2.0.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
sqlalchemy-utils = "^0.41.2"
langchain = "0.2.5"
langchain-community = "0.2.5"
langchain-postgres = "0.0.9"
langchain-aws = "0.1.4"
langchain-text-splitters = "0.2.1"
pymupdf = "1.24.5"
random-user-agent = "^1.0.1"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
types-beautifulsoup4 = "^4.12.0.20241020"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"